framec_tests/language_specific/csharp/v3_facade_smoke/negative/strict_invalid_native.frm
@target csharp

system S {
    machine:
        $A {
            e() {
                -> $B();
                int x = ;   // malformed native statement for strict facade
            }
        }
        $B {
        }
}

